# flux

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  __init__.py  docker-compose.yml  flux.toml  github_windows  github_windows.pub  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_feedback.md  feature_request.md
.github/test-events/: paths.json  pull_request.json
.github/workflows/: build-deploy.yml  build-publish.yml  docs.yml  pr-test.yml  pre-commit.yml  pull-request.yml  release.yml  test.yml
docs/: index.md  introduction.md
docs/advanced-features/: error-handling.md  task-patterns.md  workflow-controls.md
docs/core-concepts/: error-handling.md  execution-model.md  tasks.md  workflow-management.md
docs/getting-started/: basic_concepts.md  installation.md  quick-start-guide.md
docs/introduction/: features.md  overview.md  use-cases.md
docs/snippets/: docker-compose.md  flux-toml-example.md  installation.md
examples/: __init__.py  complex_pipeline.py  determinism.py  fallback.py  fallback_after_retry.py  fallback_after_timeout.py  fibo_benchmark.py  fibo_benchmark_parallel.py  flow_timeout.py  github_stars.py  hello_world.py  hello_world_parallel.py  multiple_pause_points.py  nested_tasks.py  output_storage.py  parallel_tasks.py  pause.py  pause_with_input.py  pipeline.py  replay_fallback.py  replay_hello_world.py  replay_parallel.py  replay_parallel_nested_tasks.py  replay_retries.py  retries.py  simple_pipeline.py  sleep.py  subflows.py  subflows_map.py  subflows_parallel.py  task_parallel.py  task_parallel_nested.py  task_parallell_nested.py  task_timeout.py  timeout.py  timeout_flow.py  using_secrets.py
examples/data/: sample.csv
examples/graph/: __init__.py  graph_simple.py  simple_graph.py
examples/tasks/: __init__.py  task_cache.py  task_fallback.py  task_fallback_after_retry.py  task_fallback_after_timeout.py  task_map.py  task_retries.py  task_rollback.py  task_timeout.py
flux/: __init__.py  activity.py  api.py  cache.py  cache_backends.py  catalogs.py  config.py  context.py  context_managers.py  decorators.py  encoders.py  errors.py  events.py  events_pubsub.py  exceptions.py  executors.py  flux.py  loaders.py  models.py  monitoring.py  output_storage.py  runner.py  runners.py  scheduler.py  secret_managers.py  server.py  task.py  tasks.py  utils.py  workflow.py
flux/activities/: __init__.py  call_workflow.py
flux/plugins/: __init__.py  kubernetes.py  s3.py
flux/tasks/: __init__.py  call_workflow.py
scripts/: __init__.py  ci.py  generate_licence_report.sh
tests/: hello_world.py  test_hello_world.py
tests/examples/: test_complex_pipeline.py  test_determinism.py  test_fallback.py  test_fallback_after_retry.py  test_fallback_after_timeout.py  test_fibo_benchmark.py  test_github_stars.py  test_hello_world.py  test_multiple_pause_points.py  test_nested_tasks.py  test_output_storage.py  test_parallel_tasks.py  test_pause.py  test_pause_with_input.py  test_pipeline.py  test_retries.py  test_sleep.py  test_subflows_github_stars.py  test_subflows_map.py  test_task_map.py  test_task_timeout.py  test_using_secrets.py
tests/examples/graph/: test_simple_graph.py
tests/examples/tasks/: test_task_cache.py  test_task_fallback.py  test_task_fallback_after_retry.py  test_task_fallback_after_timeout.py  test_task_map.py  test_task_retries.py  test_task_rollback.py  test_task_timeout.py
tests/flux/: __init__.py  test_catalogs.py  test_catalogs_module.py  test_catalogs_sqlite.py  test_config.py  test_context_manager.py  test_executors.py  test_output_storage.py  test_output_storage_integration.py  test_scheduler.py  test_utils.py  test_utils_is_hashable.py  test_utils_make_hashable.py  test_utils_parse_value.py
tests/flux/output_storage/: test_inline_output_storage.py  test_local_file_output_storage.py  test_output_storage_reference.py
tests/test_scripts/: test_ci.py
